--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -7,6 +7,7 @@ $accent: #0061d0;
 $red: #ff5f57;
 $green: #28c63f;
 $yellow: #f5bd4f;
+$blue: #0061d0;
 $gray: #dbdbdc;
 
 $colors: (
@@ -95,4 +96,15 @@ $elevation: (
   height: 100%;
   padding: 0;
   margin: 0;
+}
+
+// Common transition
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity 0.5s ease;
+}
+
+.fade-enter-from,
+.fade-leave-to {
+  opacity: 0;
 }
