UPDATE: Add tag data / Remove unused tag colors

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -14,7 +14,6 @@ $gray: #dbdbdc;
 $colors: (
   js: #f4df4f,
   ts: #4179c1,
-  node: #94ca4a,
   python: #3f7287,
   java: #a7742f,
   c: #555555,
@@ -22,13 +21,12 @@ $colors: (
   shell: #9ddd66,
   vue: #64b587,
   react: #81d8f7,
-  rxjs: #da358d,
+  angular: #cb2c38,
   pwa: #5023c0,
+  node: #94ca4a,
   git: #df5b40,
   docker: #5caeeb,
-  linux: #272727,
   vim: #4b9c54,
-  npm: #cb3837,
 );
 
 $theme: (
