ADD: Activity data, Update color scheme

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -13,10 +13,10 @@ $gray: #dbdbdc;
 
 $colors: (
   // basics
-    red: $red,
-  green: $green,
-  yellow: $yellow,
-  blue: $blue,
+    red: #cb2c38,
+  green: #64b587,
+  yellow: #f4df4f,
+  blue: #4179c1,
   gray: $gray,
   // ------
     js: #f4df4f,
