FIXED: Safari font size issue
- Add text-size-adjust

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -136,6 +136,7 @@ html {
   -webkit-touch-callout: none;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: none;
   font-size: 12px;
 
   @include size(sm) {
